fixed white space issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,8 @@
             color: #707070;
             background-color: #ffffff;
             overflow-x: hidden;
+            padding-right: 0px;
+            margin-right: 0px;
         }
         /*Navbar*/
         
@@ -23,7 +25,7 @@
         
         .hero-image {
             width: 100%;
-            max-height: 100vh;
+            min-width: 100vw;
         }
         
         .title {
